<resources>
    <string name="app_name">animeTracker</string>
    <string name="profile">Profile</string>
    <string name="anime_list">Anime List</string>
    <string name="setting">Setting</string>
    <string name="anime_info">Anime Info</string>
    <string name="avatar">avatar</string>
    <string name="userName">User Name</string>
    <string name="login">Login with Anilist</string>
    <string name="status">Status</string>
    <string name="title">title</string>
    <string name="score">Score</string>
    <string name="progress">Progress</string>
    <string name="coverimage">coverImage</string>
    <string name="textview">TextView</string>
    <string name="cancel">Cancel</string>
    <string name="update">Update</string>
    <string name="totalepisodes">totalEpisodes</string>
    <string name="search">Search</string>
    <string name="season">Season</string>
    <string name="description">Description</string>
    <string name="about">About</string>
    <string name="back">Back</string>
    <string name="episode">Episode</string>
    <string name="edit_entry">Edit Entry</string>
    <string name="popularity">Popularity</string>
    <string name="total_entries">Total Entries</string>
    <string name="anime_stats">Anime Stats</string>
    <string name="mean_score">Mean Score</string>
    <string name="episodes_watched">Episodes Watched</string>
    <string name="watch_time">Watch Time</string>

    <string-array name="status_array">
        <item>CURRENT</item>
        <item>PLANNING</item>
        <item>COMPLETED</item>
        <item>DROPPED</item>
        <item>PAUSED</item>
        <item>REPEATING</item>
    </string-array>
</resources>
