<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.user_profile.ProfileFragment">

    <TextView
        android:id="@+id/totalEntries"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/total_entries"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/profileAvatar"
        app:layout_constraintStart_toStartOf="@+id/profileAvatar"
        app:layout_constraintTop_toBottomOf="@+id/animeStats" />

    <TextView
        android:id="@+id/userName"
        android:layout_width="350dp"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        android:text="@string/userName"
        android:textAlignment="center"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/profileAvatar"
        android:layout_width="230dp"
        android:layout_height="230dp"
        android:contentDescription="@string/avatar"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="@+id/userName"
        app:layout_constraintStart_toStartOf="@+id/userName"
        app:layout_constraintTop_toBottomOf="@+id/userName" />

    <TextView
        android:id="@+id/animeStats"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="12dp"
        android:text="@string/anime_stats"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/profileAvatar"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="@+id/profileAvatar"
        app:layout_constraintTop_toBottomOf="@+id/profileAvatar" />

    <TextView
        android:id="@+id/averageScore"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/mean_score"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/totalEntries"
        app:layout_constraintStart_toStartOf="@+id/totalEntries"
        app:layout_constraintTop_toBottomOf="@+id/totalEntries" />

    <TextView
        android:id="@+id/episodesWatched"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/episodes_watched"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/averageScore"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/averageScore"
        app:layout_constraintTop_toBottomOf="@+id/averageScore" />

    <TextView
        android:id="@+id/watchTime"
        android:layout_width="240dp"
        android:layout_height="20dp"
        android:layout_marginTop="8dp"
        android:text="@string/watch_time"
        android:textAlignment="center"
        app:layout_constraintEnd_toEndOf="@+id/episodesWatched"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/episodesWatched"
        app:layout_constraintTop_toBottomOf="@+id/episodesWatched" />


</androidx.constraintlayout.widget.ConstraintLayout>