<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.profile.update_list_fragment.UpdateListFragment">

    <TextView
        android:id="@+id/title"
        android:layout_width="350dp"
        android:layout_height="80dp"
        android:lines="3"
        android:text="@string/textview"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.491"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.052" />

    <Button
        android:id="@+id/cancelButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginTop="68dp"
        android:text="@string/cancel"
        app:layout_constraintEnd_toStartOf="@+id/updateButton"
        app:layout_constraintHorizontal_bias="0.026"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/score" />

    <Button
        android:id="@+id/updateButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="80dp"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="@+id/cancelButton"
        app:layout_constraintVertical_bias="0.0" />

    <TextView
        android:id="@+id/score"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginTop="56dp"
        android:text="@string/score"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/progress"
        app:layout_constraintTop_toBottomOf="@+id/progress" />

    <TextView
        android:id="@+id/progress"
        android:layout_width="70dp"
        android:layout_height="25dp"
        android:layout_marginTop="56dp"
        android:text="@string/progress"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="@+id/status"
        app:layout_constraintTop_toBottomOf="@+id/status" />

    <TextView
        android:id="@+id/status"
        android:layout_width="50dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        android:layout_marginTop="60dp"
        android:text="@string/status"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <Spinner
        android:id="@+id/statusSpinner"
        android:layout_width="160dp"
        android:layout_height="25dp"
        android:layout_marginStart="60dp"
        app:layout_constraintBottom_toBottomOf="@+id/status"
        app:layout_constraintStart_toEndOf="@+id/status"
        app:layout_constraintTop_toTopOf="@+id/status"
        app:layout_constraintVertical_bias="0.0" />

    <EditText
        android:id="@+id/scoreEntry"
        android:layout_width="160dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/score"
        app:layout_constraintStart_toStartOf="@+id/statusSpinner"
        app:layout_constraintTop_toTopOf="@+id/score" />

    <EditText
        android:id="@+id/progressEntry"
        android:layout_width="80dp"
        android:layout_height="50dp"
        android:ems="10"
        android:inputType="number"
        android:textAlignment="center"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/progress"
        app:layout_constraintStart_toStartOf="@+id/statusSpinner"
        app:layout_constraintTop_toTopOf="@+id/progress" />

    <TextView
        android:id="@+id/totalEpisodes"
        android:layout_width="80dp"
        android:layout_height="25dp"
        android:text= "@string/totalepisodes"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@+id/progressEntry"
        app:layout_constraintStart_toEndOf="@+id/progressEntry"
        app:layout_constraintTop_toTopOf="@+id/progressEntry" />

</androidx.constraintlayout.widget.ConstraintLayout>