<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardBackgroundColor="#0EAE2323"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/animeCoverImage"
                android:layout_width="50dp"
                android:layout_height="75dp"
                android:layout_marginStart="8dp"
                android:contentDescription="@string/coverimage"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/ic_launcher_background" />

            <TextView
                android:id="@+id/animeTitle"
                android:layout_width="300dp"
                android:layout_height="20dp"
                android:layout_marginStart="24dp"
                android:text="@string/title"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/animeCoverImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.163" />

            <TextView
                android:id="@+id/animeStatus"
                android:layout_width="100dp"
                android:layout_height="18dp"
                android:text="@string/status"
                android:textSize="14sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.11"
                app:layout_constraintStart_toEndOf="@+id/animeCoverImage"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.51" />

            <TextView
                android:id="@+id/animeScore"
                android:layout_width="90dp"
                android:layout_height="18dp"
                android:layout_marginEnd="16dp"
                android:text="@string/score"
                app:layout_constraintBottom_toBottomOf="@+id/animeStatus"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toEndOf="@+id/animeStatus"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="1.0" />

            <TextView
                android:id="@+id/animeProgress"
                android:layout_width="160dp"
                android:layout_height="18dp"
                android:layout_marginEnd="244dp"
                android:text="@string/progress"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/animeStatus"
                app:layout_constraintTop_toBottomOf="@+id/animeStatus"
                app:layout_constraintVertical_bias="0.0" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>